[package]
name = "finli"
version = "0.1.1"
edition = "2021"
description = "A CLI tool for financial reporting and PDF generation"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rust_decimal = "1.37.2"
walkdir = "2"
genpdf = "0.2"

[[bin]]
name = "finli"
path = "src/main.rs"
